--- a/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="message"
-            type="com.sceyt.chat.ui.data.models.messages.SceytUiMessage" />
+            type="com.sceyt.chat.ui.data.models.messages.SceytMessage" />
     </data>
 
     <RelativeLayout
