--- a/app/src/main/res/layout/sceyt_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_files_message.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="message"
-            type="com.sceyt.chat.ui.data.models.messages.SceytUiMessage" />
+            type="com.sceyt.chat.ui.data.models.messages.SceytMessage" />
     </data>
 
     <RelativeLayout
@@ -57,11 +57,13 @@
             android:layout_below="@+id/messageDay"
             android:layout_alignParentEnd="true"
             android:background="@drawable/bg_out_message"
+            android:maxWidth="@dimen/bodyMaxWidth"
+            android:minWidth="@dimen/bodyMaxWidth"
             android:paddingTop="2dp">
 
             <include
                 android:id="@+id/viewReplay"
-                layout="@layout/sceyt_ui_recycler_replay_container"
+                layout="@layout/sceyt_recycler_replay_container"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
@@ -73,39 +75,53 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/messageBody"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="8dp"
-                android:textColor="@color/colorFontDarkFinal"
+                android:text="@{message.body}"
+                android:textColor="@color/colorFontDark"
                 android:textSize="@dimen/mediumTextSize"
-                app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
                 app:layout_constraintStart_toStartOf="@+id/layoutDetails"
                 app:layout_constraintTop_toBottomOf="@+id/viewReplay"
-                app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
-                tools:text="Lore ipsum description is created from" />
+                bind:visibleIf="@{!message.body.empty}"
+                tools:text="Lore ipsum  is the correct text which" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvFiles"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/messageBody"
+                tools:itemCount="3"
+                tools:listitem="@layout/sceyt_message_file_item" />
 
             <com.sceyt.chat.ui.presentation.customviews.DateStatusView
                 android:id="@+id/messageDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:paddingHorizontal="8dp"
                 android:layout_marginBottom="2dp"
-                android:includeFontPadding="false"
+                android:paddingHorizontal="8dp"
                 app:dateTextColor="#7C7E8E"
                 app:dateTextSize="@dimen/tinyTextSize"
                 app:firstStatus="false"
-                app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
-                app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+                app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+                app:layout_constraintEnd_toEndOf="@id/rvFiles"
                 app:statusIconMargin="5dp"
                 app:statusIconSize="16dp"
                 bind:incoming="@{message.incoming}"
                 bind:status="@{message.status}"
                 tools:dateText="00:37"
-                tools:statusIcon="@drawable/ic_status_delivered" />
+                tools:statusIcon="@drawable/ic_status_read" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -120,7 +136,7 @@
             android:paddingTop="4dp"
             android:visibility="gone"
             tools:itemCount="3"
-            tools:listitem="@layout/sceyt_ui_item_reaction" />
+            tools:listitem="@layout/sceyt_item_reaction" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvReplayCount"
