Was created UI and functionality for MessageInputView.kt. Was started creating UI and functionality from Conversation header view.

--- a/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
@@ -33,7 +33,7 @@
             bind:visibleIf="@{message.showDate}"
             tools:text="Feb 24" />
 
-        <com.sceyt.chat.ui.presentation.customviews.Avatar
+        <com.sceyt.chat.ui.presentation.customviews.AvatarView
             android:id="@+id/avatar"
             android:layout_width="@dimen/_28sdp"
             android:layout_height="@dimen/_28sdp"
