--- a/app/src/main/res/layout/sceyt_item_channel.xml
+++ b/app/src/main/res/layout/sceyt_item_channel.xml
@@ -17,10 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.sceyt.chat.ui.presentation.customviews.Avatar
+        <com.sceyt.chat.ui.presentation.customviews.AvatarView
             android:id="@+id/avatar"
-            android:layout_width="@dimen/_46sdp"
-            android:layout_height="@dimen/_46sdp"
+            android:layout_width="@dimen/_42sdp"
+            android:layout_height="@dimen/_42sdp"
             android:layout_marginVertical="8dp"
             app:cardBackgroundColor="@color/colorGreen"
             app:layout_constraintBottom_toBottomOf="parent"
