--- a/app/src/main/res/layout/sceyt_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_files_message.xml
@@ -58,8 +58,7 @@
             android:layout_alignParentEnd="true"
             android:background="@drawable/bg_out_message"
             android:maxWidth="@dimen/bodyMaxWidth"
-            android:minWidth="@dimen/bodyMaxWidth"
-            android:paddingTop="2dp">
+            android:minWidth="@dimen/bodyMaxWidth">
 
             <include
                 android:id="@+id/viewReplay"
@@ -67,7 +66,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="8dp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +77,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="6dp"
                 android:layout_marginBottom="8dp"
                 android:text="@{message.body}"
                 android:textColor="@color/colorFontDark"
