--- a/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
@@ -99,9 +99,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:layout_marginBottom="6dp"
+                android:layout_marginBottom="2dp"
                 app:dateTextColor="#7C7E8E"
                 app:dateTextSize="@dimen/tinyTextSize"
+                app:statusIconSize="16dp"
                 app:firstStatus="false"
                 app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
                 app:layout_constraintEnd_toEndOf="@id/layoutDetails"
