--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,5 @@
     <color name="sceyt_color_status_bar">#010212</color>
     <color name="sceyt_color_bottom_nav">#1A1B2A</color>
     <color name="sceyt_color_text_themed">#ffffff</color>
+    <color name="sceyt_color_dialog_bg_themed">#1A1B2A</color>
 </resources>
