--- a/app/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -46,7 +46,7 @@
             android:layout_alignBottom="@+id/tvReplayCount"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="5sp"
+            android:layout_marginBottom="9dp"
             android:visibility="gone"
             app:sceytToReplayLineViewToLeft="true" />
 
@@ -127,10 +127,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/rvReactions"
-            android:layout_marginVertical="4dp"
             android:layout_marginEnd="2dp"
             android:layout_toStartOf="@+id/toReplayLine"
             android:includeFontPadding="false"
+            android:paddingVertical="4dp"
             android:textColor="@color/sceyt_color_accent"
             android:textSize="@dimen/tinyTextSize"
             android:visibility="gone"
