--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="sceyt_color_divider">#CDCDCF</color>
     <color name="sceyt_color_text_themed">#060A26</color>
     <color name="sceyt_color_input">#F1F2F6</color>
+    <color name="sceyt_color_dialog_bg_themed">#FFFFFF</color>
 
 
     // Not themed colors
@@ -25,6 +26,7 @@
     <color name="sceyt_color_green">#4BB34B</color>
     <color name="sceyt_color_yellow">#FBB019</color>
     <color name="sceyt_color_font_warning">#ED4D60</color>
+    <color name="sceyt_color_red">#F23F51</color>
     <color name="sceyt_color_gray">#F1F2F6</color>
 
 
