Was created animations to show dialogs. Was created theme dark/light from dialogs, and BottomSheetEmojisFragment.kt. Was started creating functionality to set text fonts.

--- a/app/src/main/res/layout/sceyt_fragment_bottom_sheet_emojis.xml
+++ b/app/src/main/res/layout/sceyt_fragment_bottom_sheet_emojis.xml
@@ -9,7 +9,7 @@
         android:layout_height="4dp"
         android:layout_marginVertical="10dp"
         android:background="@drawable/sceyt_bg_corners_20"
-        android:backgroundTint="#3D000000"
+        android:backgroundTint="@color/sceyt_color_divider"
         app:layout_constraintBottom_toTopOf="@+id/emojiPopupLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,6 @@
         android:id="@+id/emojiPopupLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/sceyt_color_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:.7" />
 
