--- a/app/src/main/res/menu/menu_popup_message.xml
+++ b/app/src/main/res/menu/menu_popup_message.xml
@@ -35,6 +35,6 @@
     <item
         android:id="@+id/sceyt_delete_message"
         android:icon="@drawable/sceyt_ic_trash"
-        android:title="@string/delete_message"
+        android:title="@string/delete"
         app:showAsAction="ifRoom" />
 </menu>
