--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     </style>
 
     <style name="SceytAppModalStyle" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@drawable/sceyt_rounded_dialog</item>
+        <item name="android:background">@drawable/sceyt_bg_bottom_sheet_dialog</item>
     </style>
 
     <style name="SceytShapeAppearanceOverlay.CornerSize18" parent="">
@@ -40,7 +40,17 @@
         <item name="android:scrollbars">none</item>
         <item name="android:scrollbarSize">0dp</item>
         <item name="android:layoutAnimation">@anim/sceyt_layout_animation_fall_down</item>
-        <item name="android:dividerHeight">0.5dp</item>
     </style>
 
+    <style name="SceytDialogNoTitle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowMinWidthMajor">90%</item>
+        <item name="android:windowMinWidthMinor">90%</item>
+        <item name="android:windowBackground">@drawable/sceyt_bg_dialog</item>
+    </style>
+
+    <style name="SceytDialogWindowAnimation">
+        <item name="android:windowEnterAnimation">@anim/sceyt_anim_dialog_enter</item>
+        <item name="android:windowExitAnimation">@anim/sceyt_anim_dialog_exit</item>
+    </style>
 </resources>
