--- a/app/src/main/res/layout/sceyt_message_input_view.xml
+++ b/app/src/main/res/layout/sceyt_message_input_view.xml
@@ -10,9 +10,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height=".5dp"
-            app:layout_constraintTop_toTopOf="parent"
             android:background="@color/sceyt_color_divider"
-            app:layout_constraintBottom_toTopOf="@+id/rvAttachments" />
+            app:layout_constraintBottom_toTopOf="@+id/rvAttachments"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvAttachments"
@@ -31,69 +31,65 @@
         <View
             android:layout_width="match_parent"
             android:layout_height=".5dp"
-            app:layout_constraintTop_toBottomOf="@+id/rvAttachments"
             android:background="@color/sceyt_color_divider"
-            app:layout_constraintBottom_toTopOf="@+id/layoutInput" />
+            app:layout_constraintBottom_toTopOf="@+id/layoutReplayMessage" />
+
+        <include
+            android:id="@+id/layoutReplayMessage"
+            layout="@layout/sceyt_replay_message_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rvAttachments" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layoutInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/rvAttachments">
-
-            <include
-                android:id="@+id/layoutReplayMessage"
-                layout="@layout/sceyt_replay_message_container"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/messageInput"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop=".5dp"
+            android:background="@color/sceyt_color_dialog_bg_themed"
+            android:paddingVertical="15dp"
+            android:animateLayoutChanges="true"
+            app:layout_constraintTop_toBottomOf="@+id/layoutReplayMessage">
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/messageInput"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginVertical="8dp"
-                android:background="@drawable/sceyt_bg_corners_30"
-                android:backgroundTint="@color/sceyt_color_input"
+                android:background="@null"
                 android:hint="@string/message"
                 android:includeFontPadding="false"
                 android:inputType="textMultiLine"
                 android:maxLines="3"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="8dp"
+                android:minHeight="24dp"
                 android:textColor="@color/sceyt_color_black_themed"
                 android:textColorHint="@color/sceyt_color_hint"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/icSendMessage"
-                app:layout_constraintStart_toEndOf="@+id/icAddAttachments"
-                app:layout_constraintTop_toBottomOf="@+id/layoutReplayMessage"
-                tools:ignore="TouchTargetSizeCheck" />
+                app:layout_constraintStart_toEndOf="@+id/icAddAttachments" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/icAddAttachments"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:tint="@color/sceyt_color_accent"
-                app:layout_constraintBottom_toBottomOf="@id/messageInput"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/messageInput"
                 app:srcCompat="@drawable/sceyt_ic_upload_file" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/icSendMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintBottom_toBottomOf="@+id/messageInput"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/messageInput"
                 app:srcCompat="@drawable/sceyt_ic_send_message" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
