--- a/app/src/main/res/layout/sceyt_replay_message_container.xml
+++ b/app/src/main/res/layout/sceyt_replay_message_container.xml
@@ -9,7 +9,7 @@
         android:id="@+id/view"
         android:layout_width="2dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginVertical="8dp"
         android:background="@drawable/sceyt_bg_corners_10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
