--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="windowActionBar">false</item>
         <item name="android:statusBarColor">@color/sceyt_color_status_bar</item>
         <item name="windowNoTitle">true</item>
+        <item name="fontFamily">@font/roboto_regular</item>
     </style>
 
     <style name="SceytAppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
