--- a/app/src/main/res/layout/sceyt_dialog_view.xml
+++ b/app/src/main/res/layout/sceyt_dialog_view.xml
@@ -7,8 +7,9 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
         android:layout_marginTop="24dp"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/bigTextSize"
@@ -20,70 +21,48 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_description"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
-        android:gravity="center"
         android:fontFamily="@font/roboto_medium"
-        android:textColor="@color/sceyt_color_text_themed"
+        android:textColor="@color/sceyt_color_gray_400"
         android:textSize="@dimen/smallTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/text_title"
+        app:layout_constraintStart_toStartOf="@+id/text_title"
         app:layout_constraintTop_toBottomOf="@+id/text_title"
         tools:text="Description" />
 
-    <View
-        android:id="@+id/lineButton"
-        android:layout_width="0dp"
-        android:layout_height="0.5dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/sceyt_color_divider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_description" />
-
-    <androidx.appcompat.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/button_cancel"
-        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:background="?attr/selectableItemBackground"
+        android:padding="8dp"
+        android:fontFamily="@font/roboto_medium"
         android:textAllCaps="false"
-        android:textColor="@color/sceyt_color_text_themed"
+        android:textColor="@color/sceyt_color_accent"
         android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintEnd_toStartOf="@+id/view"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lineButton"
+        app:layout_constraintBottom_toBottomOf="@+id/button_accept"
+        app:layout_constraintEnd_toStartOf="@+id/button_accept"
+        app:layout_constraintTop_toTopOf="@+id/button_accept"
         tools:text="No" />
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="0.5dp"
-        android:layout_height="0dp"
-        android:background="@color/sceyt_color_divider"
-        app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
-        app:layout_constraintEnd_toStartOf="@+id/button_accept"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_cancel"
-        app:layout_constraintTop_toTopOf="@+id/button_cancel" />
-
-    <androidx.appcompat.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/button_accept"
-        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:background="?attr/selectableItemBackground"
+        android:padding="8dp"
+        android:fontFamily="@font/roboto_medium"
         android:textAllCaps="false"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/sceyt_color_accent"
         android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view"
-        app:layout_constraintTop_toTopOf="@+id/button_cancel"
+        app:layout_constraintTop_toBottomOf="@+id/text_description"
         tools:text="Yes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
