Was crated functionality to update channel list, when channel is updated.\ Was added functionality to create custom ChannelViewHolderFactory.kt, and customise logic in channels list.

--- a/app/src/main/res/layout/sceyt_item_channel.xml
+++ b/app/src/main/res/layout/sceyt_item_channel.xml
@@ -34,7 +34,7 @@
             android:layout_margin="1dp"
             android:background="@drawable/sceyt_bg_circle"
             android:backgroundTint="@color/sceyt_color_bg"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/avatar"
             app:layout_constraintEnd_toEndOf="@id/avatar"
             bind:channel="@{data}"
@@ -58,16 +58,20 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/channelTitle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="8dp"
+            android:drawablePadding="2dp"
             android:ellipsize="end"
             android:includeFontPadding="false"
             android:lines="1"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             android:textStyle="bold"
+            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toStartOf="@+id/updateDate"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@+id/avatar"
             app:layout_constraintTop_toTopOf="@id/avatar"
             bind:themedTextColor="@{R.color.sceyt_color_text_themed}"
@@ -78,11 +82,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:lines="1"
             android:textColor="@color/sceyt_color_gray_400"
             android:textSize="@dimen/smallTextSize"
-            app:layout_constraintEnd_toEndOf="@+id/channelTitle"
+            app:layout_constraintEnd_toStartOf="@+id/updateDate"
             app:layout_constraintStart_toStartOf="@id/channelTitle"
             app:layout_constraintTop_toBottomOf="@+id/channelTitle"
             bind:setChannelLastMessageText="@{data.message}"
